--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -12,8 +12,17 @@
         @foreach (KeyValuePair<string, string> field in job)
         {
             <tr>
-                <td>@field.Key</td>
-                <td>@field.Value</td>
+                <td>@field.Key.Substring(0, 1).ToUpper()@field.Key.Substring(1)</td>
+                <td>
+                    @if (field.Key != "name")
+                    {
+                        <a asp-controller="List" asp-action="Jobs" asp-route-column="@field.Key" asp-route-value="@field.Value">@field.Value</a>
+                    }
+                    else
+                    {
+                        @field.Value
+                    }
+                </td>
             </tr>
         }
     </table>
