--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -6,25 +6,4 @@
     // TODO #3 - Use the same list display from Views/Search/Index.cshtml
 }
 
-@foreach (Dictionary<string, string> job in ViewBag.jobs)
-{
-    <table class="job-listing">
-        @foreach (KeyValuePair<string, string> field in job)
-        {
-            <tr>
-                <td>@field.Key.Substring(0, 1).ToUpper()@field.Key.Substring(1)</td>
-                <td>
-                    @if (field.Key != "name")
-                    {
-                        <a asp-controller="List" asp-action="Jobs" asp-route-column="@field.Key" asp-route-value="@field.Value">@field.Value</a>
-                    }
-                    else
-                    {
-                        @field.Value
-                    }
-                </td>
-            </tr>
-        }
-    </table>
-
-}
+@await  Html.PartialAsync("_DisplayJobs")
